[package]
name = "tokio-uring-rustls"
version = "0.3.1"
authors = ["CTY <ctychen2216@gmail.com>"]
description = "Integrate rustls into tokio-uring"
license = "MIT"
edition = "2021"
repository = "https://github.com/cty123/tokio-uring-rustls"

[lib]
name = "tokio_uring_rustls"
path = "src/lib.rs"

[dependencies]
rustls = "0.23.23"
tokio-uring = { git = "https://github.com/kostasgr100/tokio-uring.git", branch = "main", features = ["bytes"] }
bytes = { version = "1" }

[dev-dependencies]
rustls = { version = "0.23.23", features = ["dangerous_configuration"] }
rustls-pemfile = "2.2.0"
tokio = { version = "1", features = ["full"] }
clap = "4.5.31"
